<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Logcat</string>

    <string name="log_tag_label">Log TAG:</string>
    <string name="log_tag_hint">Please enter log TAG</string>
    <string name="log_tag_default">MainActivity</string>
    <string name="log_content_label">Log Content:</string>
    <string name="log_content_hint">Please enter log content</string>
    <string name="log_content_default">I am the log content</string>
    <string name="print_log_debug">Print log using Log.d</string>
    <string name="print_log_info">Print log using Log.i</string>
    <string name="print_log_warn">Print log using Log.w</string>
    <string name="print_log_error">Print log using Log.e</string>
    <string name="log_tag_empty_hint">Log TAG cannot be empty</string>
    <string name="log_content_empty_hint">Log content cannot be empty</string>
    <string name="log_success_hint">Print successful, please click the robot icon to view logs</string>
    <string name="notification_hint">Please click the notification bar entrance to view logs</string>
</resources>