<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.hjq.bar.TitleBar
        android:id="@+id/tb_main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:leftIcon="@null"
        app:title="https://github.com/getActivity/Logcat" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/log_tag_label" />

                    <EditText
                        android:id="@+id/et_main_input_log_tag"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/log_tag_hint"
                        android:text="@string/log_tag_default" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/log_content_label" />

                    <EditText
                        android:id="@+id/et_main_input_log_content"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/log_content_hint"
                        android:text="@string/log_content_default" />
                </LinearLayout>

                <Button
                    android:id="@+id/btn_main_print_log_debug"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/print_log_debug" />

                <Button
                    android:id="@+id/btn_main_print_log_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/print_log_info" />

                <Button
                    android:id="@+id/btn_main_print_log_warn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/print_log_warn" />

                <Button
                    android:id="@+id/btn_main_print_log_error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/print_log_error" />

            </LinearLayout>

        </FrameLayout>

    </android.support.v4.widget.NestedScrollView>

</LinearLayout>